# Dytallix

./: .dockerignore  .env.example  .env.secrets_migration  .gitignore  .gitleaks.toml  ACCRUED_REWARDS_IMPLEMENTATION.md  AI_INTEGRATION_ROADMAP.md  AI_MODULES_DASHBOARD_COMPLETE.md  AI_MODULES_DASHBOARD_SUMMARY.md  ARCHITECTURE.md  BALANCE_FIX_MANUAL.md  BLOCKCHAIN_FAILURE_DIAGNOSIS.md  BRIDGE_CONFIGURATION.md  BRIDGE_DEPLOYMENT_FINAL.md  BRIDGE_IMPLEMENTATION_ROADMAP.md  BRIDGE_TODO_IMPLEMENTATION_SUMMARY.md  BUILD_ON_DYTALLIX_ROADMAP.md  CHANGELOG.md  COMPREHENSIVE_TESTNET_DEPLOYMENT.md  CONTRIBUTING.md  CRITICAL_MVP_GAPS_COMPLETE.md  CROSS_CHAIN_BRIDGE_TESTING_IMPLEMENTATION.md  Cargo.toml  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_SUCCESS.md  DEPLOYMENT_SUCCESS_SUMMARY.md  DEPLOYMENT_TROUBLESHOOTING.md  DOCS_PAGE_UPDATES.md  DUAL_TOKEN_SYSTEM_COMPLETE.md  DYTALLIX_DUAL_TOKEN_FAUCET_COMPLETE.md  DYTALLIX_MAINNET_LAUNCH_PLAN.md  Dockerfile  Dockerfile.node  Dytallix BlueSky Document.md  DytallixFinalLaunchTasks.md  DytallixLeanLaunch.md  Dytallix_30_60_90_Development_Plan.md  Dytallix_Update_1.0.md  FAUCET_CONSOLIDATION_MIGRATION.md  (+178 more)
CryptoAudit/dytallix-crypto-audit/: Cargo.toml  README.md  run_audit.sh
DytallixLeanLaunch/tokenomics/: Cargo.toml  README.md
benchmarks/: Cargo.toml  README.md  ai_api_performance_test.py  baseline_metrics.md  bench_pqc_tx.rs  bench_tests.rs  bridge_latency_profiler.py  bridge_stress_testing.py  database_performance_test.py  network_performance_test.sh  osmosis_wasm_benchmarks.rs  run_benchmarks.py  sepolia_evm_benchmarks.rs  unified_metrics_collector.py  wasm_optimization_tests.rs
benchmarks/benches/: pqc_verification.rs
benchmarks/results/: concurrent_connections_20250725_151243.json  interface_stats_20250725_151243.json  network_bandwidth_20250725_151243.json  network_latency_20250725_151010.json  network_latency_20250725_151243.json  network_latency_20250725_151442.json  network_throughput_20250725_151243.json
blockchain-core/: Cargo.toml  INTERFACES.md  README.md  SECRETS_README.md  compliance_export_20250708_073832.json  task_3_4_demo.py
blockchain-core/examples/: circuit_breaker_demo.rs  cli_integration_demo.rs  genesis_usage.rs  health_check_demo.rs  secrets_demo.rs
blockchain-core/src/: config.rs  contracts.rs  genesis.rs  genesis_integration.rs  lib.rs  main.rs  main_backup.rs  staking.rs  state_commitment.rs  types.rs
blockchain-core/tests/: ai_request_payload_test.rs  circuit_breaker_test.rs  connectivity_test.rs  health_check_test.rs  oracle_registry_comprehensive_test.rs  secrets_integration_test.rs  signature_verification_integration_test.rs  signed_response_test.rs  simple_contract_integration_test.rs  standalone_signature_verification_test.rs  wasm_integration_test.rs
cli/: Cargo.toml  README_CLI.md  genesis.json
cli/config/: governance.toml
cli/dytx/: package-lock.json
cli/src/: addr.rs  batch.rs  config.rs  keystore.rs  lib.rs  main.rs  output.rs  rpc.rs  secure.rs  tx.rs
cli/tests/: batch_tx.rs  crypto_roundtrip.rs  governance_params.rs  kdf_derive.rs  keystore_roundtrip.rs  keystore_security.rs  passphrase_retry.rs  transfer_flow.rs
deployment/cosmos-contracts/: .env.example  .env.template  .gitignore  Cargo.toml  DEPLOYMENT_READY.md  package-lock.json  package.json  test-deployment-interface.js  verify-deployment-ready.sh
developer-tools/: CLI_ENHANCEMENT_COMPLETION.md  CLI_EXAMPLES.md  Cargo.toml  README.md  escrow_contract.rs  test-fixed-encryption_full_export.json
developer-tools/src/: client.rs  config.rs  crypto.rs  help.rs  main.rs  tokens.rs
dytallix-fast-launch/pqc-wasm/: .gitignore  .npmignore  CHANGELOG.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  INTEGRATION_ROADMAP.md  LICENSE  PUBLISHING.md  QUICKSTART.md  README.md  SDK_INTEGRATION_CHECKLIST.md  SETUP_COMPLETE.md  VISUAL_SUMMARY.txt  build.sh  package.json  publish.sh
dytallix-lean-launch/dytallixd/: Cargo.toml
dytallix-lean-launch/node/: Cargo.toml  README_RPC.md
explorer/api/: Cargo.toml
explorer/indexer/: Cargo.toml
interoperability/: Cargo.toml  ibc_client  libibc_client.rlib  polkadot_metadata.scale
interoperability/migrations/: 001_initial_bridge_schema.sql  002_database_optimization.sql
interoperability/src/: cache.rs  lib.rs  query_analysis.rs
interoperability/tests/: bridge_tests.rs
launch-evidence/staking/: .keep  Cargo.toml  README.md  after_balances.json  before_balances.json  emission_config.json  sample_config.example.toml
pqc-crypto/: Cargo.toml
pqc-crypto/src/: bridge.rs  lib.rs  lib_new.rs  (+2 more)
quantumvault/: .env.bak  .env.local  ARCHITECTURE.md  COMPLETION_SUMMARY.md  CRYPTO_VERIFICATION.md  Cargo.toml  Dockerfile  INDEX.md  PQC_ALGORITHM_EXPLANATION.md  PQC_PROTECTION_STATUS_GUIDE.md  PQC_RISK_CLASSIFICATION.md  PQC_RISK_IMPLEMENTATION_SUMMARY.md  PQC_RISK_QUICKSTART.md  PQC_RISK_TEST_PLAN.md  QUICKSTART.md  README.md  SCRIPTS.md  check_output.txt  check_output_10.txt  check_output_11.txt  check_output_12.txt  check_output_2.txt  check_output_3.txt  check_output_4.txt  check_output_5.txt  check_output_6.txt  check_output_7.txt  check_output_9.txt  check_output_tests.txt  demo.sh  docker-compose.yml  examples_curl.sh  quickstart.sh  run_tests.sh  start.sh  status.sh  stop.sh  verify_crypto_deps.sh
sdk/: .eslintrc.cjs  .gitignore  Cargo.toml  LICENSE  README-ADDITIONS.md  README.md  SECURITY.md  genesis.json  integration_tests.rs  lib.rs  package.json  pqc_wallet.rs  tests.rs  tsconfig.build.json  tsconfig.json  tsup.config.ts
smart-contracts/: COMPLETION_SUMMARY.md  Cargo.toml
tests/: Cargo.toml  README.md  contract_integration_tests.rs  contract_validation_tests.rs  emissions.rs  faucet_integration.rs  fee_burn.rs  governance_edge_cases.rs  integration_staking.rs  integration_test.rs  pqc_bridge_comprehensive_tests.rs  pqc_policy_enforcement_tests.rs  proxy.test.js  requirements.txt  security-key-management.test.ts  security_pqc_tests.rs  selfTest.test.js  simple_verification.rs  stress_test_report_1752348652.json  stress_tests.py  test_wallet.rs  test_wasm_counter.rs
(+3131 files in other folders)
