[workspace]
members = [
    "blockchain-core",
    "developer-tools", 
    "pqc-crypto",
    "smart-contracts",
    "governance",
    "interoperability"
]

resolver = "2"

[package]
name = "dytallix"
version = "0.1.0"
edition = "2021"

[dependencies]
blake3 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[workspace.dependencies]
# Shared dependencies for the workspace
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1.5"
sha3 = "0.10"
sha2 = "0.10"
hex = "0.4"
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }

# Pin problematic dependencies to compatible versions
base64ct = "=1.6.0"
time = "0.3"

[profile.release]
opt-level = 3
lto = true
