[package]
name = "dytallix-benchmarks"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
md5 = "0.7"
# PQC benchmark dependencies
dytallix-pqc = { path = "../pqc-crypto" }
blockchain-core = { path = "../blockchain-core" }
sha3 = "0.10"
base64 = "0.21"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
nix = { version = "0.27", features = ["resource"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bin]]
name = "osmosis_wasm_benchmark"
path = "osmosis_wasm_benchmarks.rs"

[[bin]]
name = "sepolia_evm_benchmark"
path = "sepolia_evm_benchmarks.rs"

[[bin]]
name = "bench_pqc_tx"
path = "bench_pqc_tx.rs"

[[bench]]
name = "pqc_verification"
harness = false

[[test]]
name = "bench_tests"
path = "bench_tests.rs"