[package]
name = "dytallix-node"
version = "0.1.0"
edition = "2021"
authors = ["Dytallix Team"]
description = "Post-quantum AI-enhanced cryptocurrency node"

[dependencies]
# Our proven PQC implementation
dytallix-pqc = { path = "../pqc-crypto" }

# Smart contracts integration now enabled
dytallix-contracts = { path = "../smart-contracts" }

# Core blockchain dependencies
blake3 = "1.5"
sha3 = "0.10"
sha2 = "0.10"
hex = "0.4"
base64ct = "=1.6.0"  # Pin to compatible version

# Networking and async runtime
tokio = { version = "1.35", features = ["full"] }
libp2p = { version = "0.52", features = ["tokio", "tcp", "noise", "gossipsub", "mdns", "yamux"] }

# Serialization and data structures
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Database and storage
rocksdb = "0.21"

# Logging and error handling
log = "0.4"
env_logger = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"

# Secrets management dependencies
async-trait = "0.1"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
regex = "1.10"
once_cell = "1.19"
bytes = "1.6"
url = "2.5"

# AI service integration
reqwest = { version = "0.11", features = ["json"] }
warp = "0.3"
tokio-tungstenite = "0.20"
futures-util = "0.3"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = ["std"]
std = []
runtime-benchmarks = []

[[example]]
name = "health_check_demo"
path = "examples/health_check_demo.rs"

[[example]]
name = "circuit_breaker_demo"
path = "examples/circuit_breaker_demo.rs"

[[bin]]
name = "dytallix-node"
path = "src/main.rs"

[[bin]]
name = "bridge-server"
path = "src/bin/bridge-server.rs"
