[package]
name = "dytallix-cli"
version = "0.1.0"
edition = "2021"
authors = ["Dytallix Team"]
description = "Command-line interface for Dytallix blockchain"

[[bin]]
name = "dytallix-cli"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }

# HTTP client for API calls
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography
pqcrypto = "0.16"
pqcrypto-dilithium = "0.5"
hex = "0.4"

# File I/O and configuration
toml = "0.8"
dirs = "5.0"

# Error handling and logging
anyhow = "1.0"
thiserror = "1.0"
env_logger = "0.10"
log = "0.4"

# Terminal utilities
colored = "2.0"
indicatif = "0.17"
dialoguer = "0.11"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
