[package]
name = "dytallix-interoperability"
version = "0.9.3"
edition = "2021"
authors = ["Dytallix Team"]
description = "Cross-chain bridge and IBC protocol implementation for Dytallix"
license = "MIT OR Apache-2.0"

[dependencies]
# Local workspace dependencies
dytallix-pqc = { path = "../pqc-crypto" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
rand = "0.8"
thiserror = "1.0"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Cryptography dependencies
sha2 = "0.10"
blake3 = "1.0"
hex = "0.4"

# Networking dependencies
reqwest = { version = "0.11", features = ["json"] }
tokio-tungstenite = "0.20"
futures = "0.3"

# Ethereum integration
ethers = { version = "2.0", features = ["ws", "rustls"] }
ethers-contract = "2.0"

# Cosmos/IBC integration  
cosmos-sdk-proto = "0.19"
ibc-proto = "0.32"
tendermint = "0.33"
tendermint-rpc = { version = "0.33", features = ["http-client", "websocket-client"] }
cosmrs = { version = "0.14", features = ["rpc", "grpc"] }
ibc-relayer-types = "0.26"
tonic = "0.9"
prost = "0.11"

# Polkadot/Substrate integration
subxt = { version = "0.32", features = ["substrate-compat"] }
sp-core = "20.0"
sp-runtime = "24.0"

# Database integration
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate"] }
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
chrono = { version = "0.4", features = ["serde"] }

# Redis caching
redis = { version = "0.23", features = ["tokio-comp", "connection-manager"] }
deadpool-redis = "0.13"
flate2 = "1.0"

# Performance monitoring and optimization
prometheus = { version = "0.13", optional = true }
metrics = { version = "0.21", optional = true }
metrics-prometheus = { version = "0.6", optional = true }

# Configuration management
config = "0.13"
toml = "0.8"

# AI/ML dependencies (optional, for optimization features) - upgraded to 0.9.1 for rand compatibility
candle-core = { version = "0.9.1", optional = true }
candle-nn = { version = "0.9.1", optional = true }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"

[features]
default = ["std"]
std = []
no-std = []
ai-optimization = ["candle-core", "candle-nn"]
monitoring = ["prometheus", "metrics", "metrics-prometheus"]

[[bin]]
name = "bridge-cli"
path = "src/bin/bridge_cli.rs"

# [[example]]
# name = "bridge_demo"
# path = "examples/bridge_demo.rs"
