[package]
name = "quantumvault"
version = "0.1.0"
edition = "2021"
authors = ["Dytallix Team"]
description = "QuantumVault - Enterprise PQC Asset Protection Platform"

[[bin]]
name = "quantumvault-server"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
tokio = { version = "1.35", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography - use workspace PQC crate
dytallix-pqc = { path = "../pqc-crypto" }
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
zeroize = { version = "1.8", features = ["derive"] }
sha2 = "0.10"
sha3 = "0.10"
blake3 = "1.5"
hex = "0.4"

# UUID and time
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# TLS/Certificate handling
rustls = "0.22"
rustls-pemfile = "2.0"
x509-parser = "0.16"
tokio-rustls = "0.25"
webpki-roots = "0.26"

# Async utilities
futures = "0.3"
async-trait = "0.1"

# HTTP Client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
url = "2.5"

# Blockchain
ethers = { version = "2.0", features = ["rustls"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
