[package]
name = "dytallix-sdk"
version = "0.1.0"
edition = "2021"
description = "Dytallix PQC Wallet SDK with deterministic Argon2id key derivation"
license = "Apache-2.0"

[dependencies]
# Core dependencies
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }

# Cryptography
argon2 = "0.5"
sha2 = "0.10"
ripemd = "0.1"
blake3 = "1.5"
hex = "0.4"
zeroize = { version = "1", features = ["derive"] }
rand = "0.8"

# PQC integration
dytallix-pqc = { path = "../pqc-crypto" }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
serde_json = "1.0"
hex = "0.4"

[lib]
name = "dytallix_sdk"
path = "lib.rs"