[package]
name = "dytallix-contracts"
version = "0.1.0"
edition = "2021"
authors = ["Dytallix Team"]
description = "Smart contract runtime and examples for Dytallix"

[dependencies]
# WASM runtime
wasmi = "0.31"
wasmtime = { version = "13.0", optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Substrate/ink! compatibility (optional)
ink_lang = { version = "4.0", default-features = false, optional = true }
ink_storage = { version = "4.0", default-features = false, optional = true }
ink_env = { version = "4.0", default-features = false, optional = true }
ink_prelude = { version = "4.0", default-features = false, optional = true }

# Substrate dependencies
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

# Cryptography
sha3 = "0.10"
blake3 = "1.5"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Utilities
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = ["std"]
std = [
    "scale/std",
    "scale-info/std",
]
ink-contracts = [
    "ink_lang",
    "ink_storage", 
    "ink_env",
    "ink_prelude",
    "scale-info",
]
wasmtime-runtime = ["wasmtime"]
sp-core = { version = "21.0", default-features = false }
sp-std = { version = "8.0", default-features = false }

# AI integration
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false }

# Error handling
thiserror = "1.0"

[dev-dependencies]
ink_e2e = "4.0"

[features]
default = ["std"]
std = [
    "ink_lang/std",
    "ink_storage/std",
    "ink_env/std",
    "ink_prelude/std",
    "scale/std",
    "scale-info/std",
    "sp-core/std",
    "sp-std/std",
    "serde/std",
]
ink-as-dependency = []

[lib]
name = "dytallix_contracts"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[example]]
name = "ai_escrow"
path = "examples/escrow/lib.rs"

[[example]]
name = "pqc_token"
path = "examples/token/lib.rs"

[[example]]
name = "ai_oracle"
path = "examples/oracle/lib.rs"
