[package]
name = "dytallix-crypto-audit"
version = "1.0.0"
edition = "2021"
authors = ["Dytallix Security Team"]
description = "Production-ready cryptographic audit execution script for Dytallix protocol"
license = "MIT"

[workspace]

[[bin]]
name = "dytallix-audit"
path = "src/main.rs"

[dependencies]
# PQC Libraries
pqcrypto-dilithium = "0.5"
pqcrypto-sphincsplus = "0.7"
pqcrypto-kyber = "0.8"
pqcrypto-traits = "0.3"

# Hashing
blake3 = "1.5"
sha3 = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI and Logging
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Timing and Metrics
criterion = "0.5"
quanta = "0.12"

# Randomness
rand = "0.8"
rand_chacha = "0.3"
getrandom = "0.2"

# Async Runtime
tokio = { version = "1.35", features = ["full"] }

# File System
walkdir = "2.4"
glob = "0.3"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Hex encoding
hex = "0.4"

# Regex for code analysis
regex = "1.10"

# Statistics
statrs = "0.16"

# Rayon for parallel processing
rayon = "1.8"

[dev-dependencies]
tempfile = "3.9"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
