[package]
name = "dytallix-pqc-wasm"
version = "0.1.1"
edition = "2021"
description = "Post-Quantum Cryptography WASM bindings for Dytallix"
repository = "https://github.com/HisMadRealm/dytallix"
license = "Apache-2.0 OR MIT"
authors = ["Dytallix Network"]

[lib]
crate-type = ["cdylib", "rlib"]
name = "pqc_wasm"

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
getrandom = { version = "0.2.11", features = ["js"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.21"
sha2 = "0.10"
bech32 = "0.9"
rand = "0.8"
# Use FIPS 204 (official ML-DSA standard) - pure Rust, WASM-compatible
fips204 = { version = "0.4", features = ["ml-dsa-65"] }
zeroize = { version = "1", features = ["zeroize_derive"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = []

[profile.release]
opt-level = "s"
codegen-units = 1
lto = true
