[package]
name = "dytallixd"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread","macros","signal"] }
parking_lot = "0.12"

# Reuse existing node crate (not currently used, placeholder for integration)
dytallix-lean-node = { path = "../node" }
