[package]
name = "dytallix-lean-node"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["ws","macros"] }
blake3 = "1.5"
bincode = "1"
bytes = "1"
cfg-if = "1"
hex = "0.4"
rocksdb = { version = "0.21", default-features = false, features = ["lz4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tokio-stream = "0.1"
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4"] }
dotenv = "0.15"
futures = "0.3"
base64 = "0.22"
ed25519-dalek = { version = "1", features = ["std"] }

[dev-dependencies]
serde_json = "1"
tempfile = "3"
