[package]
name = "dytallix-lean-node"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["ws","macros"] }
blake3 = "1.5"
bincode = "1"
bytes = "1"
cfg-if = "1"
hex = "0.4"
rocksdb = { version = "0.21", default-features = false, features = ["lz4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tokio-stream = "0.1"
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4"] }
dotenv = "0.15"
futures = "0.3"
base64 = "0.22"
ed25519-dalek = { version = "1", features = ["std"] }
# PQC real
pqcrypto-dilithium = { version = "0.5.0", optional = true }
pqcrypto-traits = { version = "0.3.5", optional = true }
sha3 = "0.10"
# Observability
prometheus = { version = "0.13", optional = true }
clap = { version = "4.4", features = ["derive"], optional = true }
once_cell = "1.21"
reqwest = { version = "0.11", features = ["json"], optional = true }
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
colored = "2" # Added for Colorize trait usage
log = "0.4"    # Added for mempool eviction logging
# New dependency: core blockchain crate for signature policy
dytallix-node = { path = "../../blockchain-core" }
# Added dependency for PQC signature algorithm mapping in mempool
dytallix-pqc = { path = "../../pqc-crypto" }

[dev-dependencies]
serde_json = "1"
tempfile = "3"
rand = "0.7"

[features]
# Lean default: only core + PQC
default = ["pqc-real"]
# Existing features
pqc-real = ["pqcrypto-dilithium", "pqcrypto-traits"]
pqc-mock = []
legacy-submit = [] # Dev-only legacy submit logic (OFF by default)
metrics = ["prometheus", "clap"] # Observability features
alerts = ["reqwest"] # Alerting system with webhook support
# Granular runtime features (compile-time) retained for optional modules
oracle = []
contracts = []
ai = []
# Convenience umbrella feature for a full node build
full-node = [
  "oracle",
  "metrics",
  "alerts",
  "contracts",
  "ai",
]
