[package]
name = "dytallix-explorer-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
warp = "0.3"
rusqlite = { version = "0.29", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
clap = { workspace = true }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
dytallix-explorer-indexer = { path = "../indexer" }