[package]
name = "dytallix-explorer-indexer"
version = "0.1.0"
edition = "2021"

[lib]
name = "dytallix_explorer_indexer"
path = "src/lib.rs"

[[bin]]
name = "indexer"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
reqwest = { workspace = true }
rusqlite = { version = "0.29", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
clap = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.0"

[features]
default = []
jsonl = []