[package]
name = "counter"
version = "0.1.0"
edition = "2021"
description = "Simple counter contract for Dytallix testnet"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[workspace]