[package]
name = "pqc-contract"
version = "0.1.0"
edition = "2021"
description = "Post-quantum cryptography demo contract for Dytallix"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[workspace]