[package]
name = "dytallix_sdk"
version = "0.1.0"
edition = "2021"
description = "Official Rust SDK for the Dytallix Blockchain"

[dependencies]
# HTTP Client
reqwest = { version = "0.11", features = ["json", "blocking"] }

# Async
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"
log = "0.4"

# Core Blockchain Types
dytallix-node = { path = "../../../blockchain-core" }

# PQC Crypto
dytallix-pqc = { path = "../../../pqc-crypto" }

# Crypto utilities for address generation
blake3 = "1.5"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
