[package]
name = "pulsescan-infer"
version = "1.0.0"
authors = ["Dytallix Team <dev@dytallix.com>"]
edition = "2021"
description = "PulseScan fraud & anomaly detection inference service"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.0", features = ["v4"] }
redis = { version = "0.24", features = ["aio", "tokio-comp"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
config = "0.14"
thiserror = "1.0"
dilithium = "0.1.0"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"

# ML/inference dependencies (upgraded to unify with latest rand compatibility)
candle-core = "0.9.1"
candle-nn = "0.9.1"
ndarray = "0.15"

# Metrics and observability
prometheus = "0.13"
metrics = "0.21"
metrics-prometheus = "0.6"
warp = { version = "0.3", default-features = false, features = ["tls"] }
toml = "0.8"

[dependencies.cosmwasm-std]
version = "1.5"
default-features = false

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"
